--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Instrucciones:Ingrese los numeros de lo que desea ordenar</h2>
+    <form id="formh" action="">
+        <h4>¿Qué desea ordenar? 1.-Hamburgesa sencilla $25 2.-Hamburguesa con queso $35 3.-Sandwich de pollo $30</h4>
+        <input id="producto" type="number" placeholder="1,2 o 3">
+        <h4>¿Tamaño del combo? 1.-Chico $5 2.-Mediano $10 3.-Grande $15</h4>
+        <input id="tamano" type="number" placeholder="1,2 o 3"> <br>
+        <button type="submit">Registrar producto</button>
+        <div id="STotal"></div>
+    </form>
     <script src="script.js"></script>
 </body>
 </html>
